2003-10-26  Ulrich Drepper  <drepper@redhat.com>

	* include/dlfcn.h (__RTLD_OPENEXEC): Define.
	* elf/dl-load.c (_dl_map_object_from_fd): Don't allow loading
	executables unless __RTLD_OPENEXEC flag is present.
	* elf/rtld.c (dl_main): Pass __RTLD_OPENEXEC flag to
	_dl_map_object when loading the executable.

	* sysdeps/generic/glob.c (glob): Handle GLOB_BRACE and escaping
	correctly.
	* posix/globtest.sh: Add tests for GLOB_BRACE and escaping.

	* resolv/nss_dns/dns-host.c (_nss_dns_gethostbyaddr_r): Default
	reverse lookup format for IPv6 addresses is using bitstring and
	.ip6.arpa suffix.
	* resolv/ns_name.c: Implement encoding and decoding bitstring in
	hex format.

2003-10-23  Jakub Jelinek  <jakub@redhat.com>

	* locale/programs/locale.c (show_info): Fix printing word values on
	64-bit big-endian architectures.

2003-10-19  Bruno Haible  <bruno@clisp.org>

	* intl/hash-string.c (hash_string): Zero-extend each char from the
	string; the old code did a sign-extend on some platforms.

2003-10-22  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/powerpc/powerpc32/Makefile (+cflags, asm-CPPFLAGS): Don't
	append options to these.
	* sysdeps/powerpc/powerpc64/Makefile (+cflags, asm-CPPFLAGS): Likewise.

2003-10-18  Carlos O'Donell  <carlos@baldric.uwo.ca>

	* sysdeps/unix/sysv/linux/hppa/sysdep.h: Fix merge error.

2003-10-15  Roland McGrath  <roland@redhat.com>

	* elf/dl-iteratephdr.c [! SHARED] (dl_iterate_phdr): New function.
	Fake an entry for the main executable and then call __dl_iterate_phdr.
	* elf/Makefile (routines): Remove dl-iteratephdr-static.
	(elide-routines.os): Likewise.
	(CFLAGS-dl-iterate-phdr-static.c): Variable removed.
	* sysdeps/generic/dl-iteratephdr-static.c: File removed.
	* sysdeps/unix/sysv/linux/ia64/dl-iteratephdr-static.c: File removed.

2003-10-15  Jakub Jelinek  <jakub@redhat.com>

	* elf/rtld.c (print_statistics): Print also number of relative
	relocations.

2003-10-12  Carlos O'Donell  <carlos@baldric.uwo.ca>
